Fix alignment of last small text

--- a/styles.css
+++ b/styles.css
@@ -77,7 +77,7 @@ main {
     max-width: 100%;
 }
 
-div {
+.main-text {
     margin: 8rem 6.5rem 8rem 3.5rem;
 }
 
@@ -96,6 +96,10 @@ h1 {
     font-size: 0.875rem;
 }
 
+p {
+    display: flex;
+    margin-right: 2rem;
+}
 .intro {
     font-weight: 600;
 }
